# deep-research-harness

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  spec.md
configs/: compaction.yaml
configs/pricing/: deepseek-v4-flash-2026-06-22.json
data/fixtures/source_snapshots/: manifest.json
data/source_snapshots/: README.md  manifest.json
docs/: c0-baseline.md  c1-compaction.md  demo-script.md  mvp2-build-plan.md  mvp2-c0-vs-c1-protocol.md  mvp2-step1-stressing-task.md  pm-handoff.md  pm-retrospective.md  task-rubric-design.md  trace-and-evidence.md
results/processed/: c0-development-frozen-v1.json
schemas/: benchmark-task.schema.json  evidence-record.schema.json  snapshot-manifest.schema.json  token-pricing.schema.json  trace-event.schema.json
src/agent/: __init__.py  budget.py  c1.py  cli.py  compaction.py  deepseek.py  fixture.py  provider.py  runner.py
src/evidence/: __init__.py  models.py  store.py
src/probes/: README.md  __init__.py  common.py  deepseek_g1_identity.py  deepseek_g2_cache.py  deepseek_g3_tools.py  deepseek_g4_stability.py  run_gates.py
src/snapshots/: __init__.py  cli.py  corpus.py  markdown.py  models.py
src/tasks/: __init__.py  cli.py  evaluate.py  load.py  models.py  preflight.py
src/tools/: __init__.py  bm25.py  runtime.py  schemas.py
src/trace/: __init__.py  cli.py  export_schemas.py  metrics.py  models.py  store.py  validate.py
tests/: test_c0_agent.py  test_c1_compaction.py  test_probes_offline.py  test_snapshots_tools.py  test_task_contracts.py  test_trace_evidence.py
(+21 files in other folders)
